[gd_scene format=3 uid="uid://fn1of7gc2wrv"]

[ext_resource type="Script" uid="uid://tt17rhov16a4" path="res://scripts/ui/settings_menu.gd" id="1_settings"]
[ext_resource type="FontFile" uid="uid://xqiy7ijtjsrv" path="res://assets/fonts/VT323-Regular.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://vhgto2asnftw" path="res://assets/sprites/ui/icons/icon_display.png" id="3_display"]
[ext_resource type="Texture2D" uid="uid://cth8p6creedae" path="res://assets/sprites/ui/icons/icon_audio.png" id="4_audio"]

[node name="SettingsMenu" type="Control" unique_id=1102014818]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="." unique_id=1816238447]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0.05, 0.9)

[node name="GlowEffect" type="ColorRect" parent="." unique_id=107308126]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -288.0
offset_right = 308.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.12)

[node name="BorderOuter" type="ColorRect" parent="." unique_id=1522327085]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -293.0
offset_right = 304.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=79385402]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -280.0
offset_right = 300.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundGradient" type="ColorRect" parent="PanelContainer" unique_id=1537686517]
layout_mode = 2
mouse_filter = 2
color = Color(0.02, 0.04, 0.08, 0.98)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=808910638]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=103255197]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 18

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=389775310]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="LeftDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=381518523]
custom_minimum_size = Vector2(40, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.5)

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=2128003097]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 36
text = "[ SETTINGS ]"
horizontal_alignment = 1

[node name="RightDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=1546563476]
custom_minimum_size = Vector2(40, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.5)

[node name="HSeparator" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1195255965]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.3)

[node name="DisplaySection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1252100757]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="DisplayHeader" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection" unique_id=1841604596]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DisplayIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection/DisplayHeader" unique_id=1269989187]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("3_display")
expand_mode = 1
stretch_mode = 5

[node name="DisplayLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection/DisplayHeader" unique_id=123579440]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "DISPLAY"

[node name="FullscreenContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection" unique_id=106591525]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="FullscreenLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection/FullscreenContainer" unique_id=598884127]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Fullscreen:"

[node name="FullscreenToggle" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection/FullscreenContainer" unique_id=569914875]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18

[node name="ResolutionContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection" unique_id=1072772333]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="ResolutionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection/ResolutionContainer" unique_id=1072167044]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Resolution:"

[node name="ResolutionSelector" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/DisplaySection/ResolutionContainer" unique_id=2016186710]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
selected = 1
item_count = 3
popup/item_0/text = "1280 x 720"
popup/item_0/id = 0
popup/item_1/text = "1600 x 900"
popup/item_1/id = 1
popup/item_2/text = "1920 x 1080"
popup/item_2/id = 2

[node name="HSeparator2" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1240852097]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.2)

[node name="AudioSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=234198166]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="AudioHeader" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection" unique_id=1965585919]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/AudioHeader" unique_id=297877571]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("4_audio")
expand_mode = 1
stretch_mode = 5

[node name="AudioLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/AudioHeader" unique_id=760045768]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "AUDIO"

[node name="MasterContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection" unique_id=754902273]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="MasterLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/MasterContainer" unique_id=853213577]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Master:"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/MasterContainer" unique_id=762991932]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 80.0

[node name="MasterValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/MasterContainer" unique_id=923461280]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "80%"
horizontal_alignment = 2

[node name="SFXContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection" unique_id=1417512988]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="SFXLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/SFXContainer" unique_id=1022772047]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "SFX:"

[node name="SFXSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/SFXContainer" unique_id=388616544]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SFXValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/SFXContainer" unique_id=1796978839]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 2

[node name="SceneContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection" unique_id=1841753900]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="SceneLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/SceneContainer" unique_id=1928374001]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Scenes:"

[node name="SceneSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/SceneContainer" unique_id=1293847500]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SceneValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/SceneContainer" unique_id=1483726500]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 2

[node name="MusicContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection" unique_id=1312497939]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/MusicContainer" unique_id=1552438708]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/MusicContainer" unique_id=726062686]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 70.0

[node name="MusicValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection/MusicContainer" unique_id=1398533858]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "70%"
horizontal_alignment = 2

[node name="ResetSettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/AudioSection" unique_id=748291056]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_colors/font_hover_color = Color(1, 0.85, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "[ RESET SETTINGS ]"

[node name="HSeparator3" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1753159755]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.2)

[node name="TutorialSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=271110374]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="TutorialLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TutorialSection" unique_id=1825170802]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "TUTORIAL"

[node name="ResetTutorialButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TutorialSection" unique_id=1078041338]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_colors/font_hover_color = Color(1, 0.85, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "[ RESET TUTORIAL ]"

[node name="HSeparator4" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1855547981]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.2)

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1464749294]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ApplyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1340478908]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "[ APPLY ]"

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1355204336]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_colors/font_hover_color = Color(0.7, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "[ BACK ]"

[node name="CornerTL" type="ColorRect" parent="." unique_id=217596497]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -288.0
offset_right = -293.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)

[node name="CornerTR" type="ColorRect" parent="." unique_id=980556676]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 291.0
offset_top = -288.0
offset_right = 299.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)

[node name="CornerBL" type="ColorRect" parent="." unique_id=668231297]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = 282.0
offset_right = -291.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)

[node name="CornerBR" type="ColorRect" parent="." unique_id=1598767066]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 293.0
offset_top = 282.0
offset_right = 301.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)
